--- a/snippets/social-meta-tags.liquid
+++ b/snippets/social-meta-tags.liquid
@@ -19,7 +19,7 @@
       {%- capture og_image_secure_url_tags -%}{% for image in product.images limit:3 -%}<meta property="og:image:secure_url" content="https:{{ image.src | product_img_url: '1200x1200' }}">{% endfor -%}{% endcapture -%}
     {%- endif -%}
 
-  {% when 'article' %}
+    {% when 'article' %}
     {%- assign og_title = article.title | strip_html -%}
     {%- assign og_type = 'article' -%}
     {%- assign og_description = article.excerpt_or_content | strip_html -%}
@@ -45,6 +45,7 @@
 {% endcase %}
 
 <meta property="og:site_name" content="{{ langify_shop_name }}" />
+<meta property="og:locale" content="en_US" />
 <meta property="og:url" content="{{ og_url }}" />
 <meta property="og:title" content="{{ og_title }}" />
 <meta property="og:type" content="{{ og_type }}" />
