--- a/snippets/fw-storyblock.liquid
+++ b/snippets/fw-storyblock.liquid
@@ -1,3 +1,3 @@
 <div class="text-center storyblock"><span class="heading">Inspiring Stories</span></div>
 <div id="storyblock"><fw-storyblock channel="{{channel}}" autoplay="true"></fw-storyblock></div>
-<script>$(function(){$("#storyblock").height(1.78*$("#storyblock").width()),$(window).resize(function(){$("#storyblock").height(1.78*$("#storyblock").width())})});</script>
+<script>$("body").on("DOMNodeInserted",function(){if($("fw-storyblock")[0].shadowRoot){let o=$("fw-storyblock")[0].shadowRoot;$(o).find(".css-1ull9ji").height(1.78*$("#storyblock").width())}});</script>
