Issue with duplicate faq block has been fixed

--- a/snippets/faq-block.liquid
+++ b/snippets/faq-block.liquid
@@ -98,4 +98,4 @@ Besides puzzle lovers, our products are purchased by artistic people, lovers of 
   }
 </style>
 
-<script>$('.description_spoiler').before($('#custom-faq'));</script>
+<script>$('.description_spoiler').first().before($('#custom-faq'));</script>
