FAQ block replaced

--- a/snippets/faq-block.liquid
+++ b/snippets/faq-block.liquid
@@ -2,61 +2,46 @@
 <div class="custom-faq" id="custom-faq">
 	<p class="line">FAQ</p>
 	<div class="accordion-tax">
-    	<span class="accordion-taxes">What forms are the puzzle pieces? Are they in the form of animals?</span>
+    	<span class="accordion-taxes">How does the size of the pieces differ for the puzzle sizes – S, M, L?</span>
   	</div>
 	<div class="panel" style="display: none;">
-        <p>*each piece has a unique form. Some (but not all) pieces are made in the form of animals, plants, depending on the puzzle’s motives. Unfortunately, it is not constructively possible to make every detail in the form of an animal or a plant.</p>
-
-      <span class="accordion-taxes">1.1.	What sizes do pieces have in KS, M and S puzzles?</span>
-<p>*Our puzzles differ in the number of pieces, so their approximate size in each puzzle is the same.   </p>
+        <p>Our sizes change with the number of pieces, so the size of the pieces is the same in every puzzle.</p>
 	</div>
 	<div class="accordion-tax">
-    	<span class="accordion-taxes">What does a wooden puzzle mean?</span>
+    	<span class="accordion-taxes">What is a wooden puzzle?</span>
   	</div>
 	<div class="panel" style="display: none;">
-        <p>* the puzzle is made of pressed HDF wood, 3mm thick. This material allows to achieve good quality and durability, it does not deform, does not leave splinters (as can happen with plywood)</p>
+        <p>Our puzzles are made from a pressured HDF that is 3mm thick. This material is eco-friendly, high-quality and durable. It doesn’t deform and doesn’t give splinters (like with plywood).</p>
 	</div>
 	<div class="accordion-tax">
-    	<span class="accordion-taxes">Why there is no an assembly instruction?</span>
+    	<span class="accordion-taxes">How long does each size puzzle take to assemble?</span>
   	</div>
 	<div class="panel" style="display: none;">
-        <p>*Puzzle is not too not too difficult that you cannot cope with it without instructions.
-   You will have a sample and a stand for it
-</p>
+        <p>Check our illustration (link/popup of with an illustration of the sizes and photo of a girl). As well as the size pay attention to the assembly times:
+          <ul>
+            <li>S -> from 2 hours</li>
+            <li>M-> from 4 hours</li>
+            <li>L-> from 6 hours</li>
+          </ul>
+          <p>The large puzzle will most probably take a couple of evenings to assemble so it is best to complete it on a separate table. </p>
 	</div>
 	<div class="accordion-tax">
-    	<span class="accordion-taxes">How can I select a correct size?</span>
+    	<span class="accordion-taxes">Who are the puzzles suitable for?</span>
   	</div>
 	<div class="panel" style="display: none;">
-        <p>*Please check our illustration (link / pop-up with an illustration of sizes and a photo with a girl). In addition to the size, pay attention to the estimated assembly time:</p>
-        <ul>
-          <li>s - \> from 2 hours</li>
-          <li>m - \> from 4 hours</li>
-          <li>ks - \> from 6 hours</li>
-     	</ul>
-		<p>Most likely, to assemble KS, you will need several evenings, so it is better to assemble it on a separate table.</p>
+        <p>Wooden puzzles are a great gift for practically anyone.</p>
+        <p>You can assemble them by yourself, getting away from your routine, it is a pleasant and useful exercise as it develops the brain and fine motor skills. </p>
+        <p>You can spend an evening assembling the puzzle with your family, children, loved ones. </p>
+        <p>As well as puzzle lovers, our jigsaws are bought by creative people, board game lovers, people who like to do simple tasks with their hands</p>
 	</div>
 	<div class="accordion-tax">
-    	<span class="accordion-taxes">Whom are the puzzles designed for?</span>
+    	<span class="accordion-taxes">What do I do with completed puzzles?</span>
   	</div>
 	<div class="panel" style="display: none;">
-        <p>*A wooden puzzle is a perfect present that may fit absolutely any person. 
-You may collect it alone, to abstract from routine. It is a pleasant and useful activity – develops brain and fine motor skills. 
-You may collect a puzzle together with your family, children and friends. 
-Besides puzzle lovers, our products are purchased by artistic people, lovers of table games, and those who like doing something not difficult with their hands. 
-</p>
-	</div>
-	<div class="accordion-tax">
-    	<span class="accordion-taxes">What can I do with the collected puzzle?</span>
-  	</div>
-	<div class="panel" style="display: none;">
-        <p>*You may use the puzzle as a decoration of your interior at home. For this purpose, we have developed a special system of sticking (Link). It fits all sizes, with the help of one kit you may stick and place on the wall up to 6 small puzzles, 3 medium puzzles or 3 King Size puzzles. </p>
-	</div>
-  	<div class="accordion-tax">
-    	<span class="accordion-taxes">What if I really want to see a certain animal, but it's not there?</span>
-  	</div>
-	<div class="panel" style="display: none;">
-        <p>* Message care@unidragon.com  - we are happy to see the users’ comments, analyze them and develop new models. </p>
+        <p>Many customers use their puzzle as an alternative to board games: they visit friends or family and complete the puzzle together. </p>
+        <p>Some families even do timed assemblies. You can also make the assembly more difficult by completing it from the other side (it also has a picture on it)! </p>
+        <p>When you’ve completed the assembly process, don’t put the puzzle back in the cupboard. Use it as interior decoration! We have developed a special gluing system for this which fixes the puzzle together and sticks it to the wall. </p>
+        <p>This is suitable for all sizes, with the help of one set you can fix and hang 6 small puzzles, 3 medium puzzles, or 3 large puzzles.</p>
 	</div>
 </div>
 <style>
@@ -98,4 +83,4 @@ Besides puzzle lovers, our products are purchased by artistic people, lovers of 
   }
 </style>
 
-<script>$('.description_spoiler').first().before($('#custom-faq'))</script>
+<script>$('.pr-info').first().append($('#custom-faq'))</script>
