--- a/snippets/size-block.liquid
+++ b/snippets/size-block.liquid
@@ -38,7 +38,7 @@
           <div><span class="size-lit-s">S</span><img loading="lazy" src="{{ 's-size-icon.png' | asset_url }}"></div>
           <div class="puzzle-pieces">≈A5</div>
           <div class="pp-label">Format size</div>
-          <div class="sm-text">≈ 9,8*4,7</div>
+          <div class="sm-text">≈ 9,8"*4,7"</div>
         </div>
     </div>
     <div class="grid__item hl"><hr></div>
@@ -76,7 +76,7 @@
           </div>
           <div class="puzzle-pieces">≈ 2*A5</div>
           <div class="pp-label">Format size</div>
-          <div class="sm-text">≈ 13*9,8</div>
+          <div class="sm-text">≈ 13"*9,8"</div>
         </div>
     </div>
     <div class="grid__item hl"><hr></div>
@@ -118,7 +118,7 @@
           </div>
           <div class="puzzle-pieces">≈ 4*A5</div>
           <div class="pp-label">Format size</div>
-          <div class="sm-text">≈ 15,7*11,8</div>
+          <div class="sm-text">≈ 15,7"*11,8"</div>
         </div>
     </div>
   </div>
