U440 Size block has been removed from Nature coll

--- a/templates/collection.liquid
+++ b/templates/collection.liquid
@@ -4,5 +4,7 @@
 {% endcomment %}
 
 {% section 'collection-template' %}
+{% unless collection.handle == 'nature-puzzles'%}
 {% section 'announcement-set-for-mouting-puzzle' %}
+{% endunless %}
 {% render 'size-block' %}
