--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -38,6 +38,96 @@
   {%- assign enable_zoom = section.settings.enable_zoom -%}
 
   <div class="grid product-single">
+    {% if product.handle == 'enchanting-owl' or product.handle == 'pre-order-majestic-wolf' or product.handle == 'lovely-tiger' %}
+    {% case product.handle %}
+        {% when 'enchanting-owl'%}
+    {% assign pref_img_name = 'Owl' %}
+        {% when 'pre-order-majestic-wolf'%}
+    {% assign pref_img_name = 'Wolf' %}
+        {% when 'lovely-tiger'%}
+    {% assign pref_img_name = 'Lion' %}
+    {% endcase %}
+    <style>.abtest{display:none;}</style>
+    <div class="grid__item product-single__photos_abtest medium-up--one-half abtest">
+      {% render 'label-product-tag', products: product %}
+        {% for media in product.media limit:3 %}
+                {% capture img_id %}FeaturedImage-{{ section.id }}-{{ media.id }}{% endcapture %}
+                {% capture img_class %}product-featured-img{% endcapture %}
+                {% capture zoom_img_id %}FeaturedImageZoom-{{ section.id }}-{{ media.id }}{% endcapture %}
+                {% capture img_wrapper_id %}{{ zoom_img_id }}-wrapper{% endcapture %}
+                {%- assign img_url = media | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
+                {% include 'image-style' with small_style: true, width: 530, height: 530, wrapper_id: img_wrapper_id, img_id: img_id %}
+                <div id="{{ img_wrapper_id }}" class="product-single__photo-wrapper small--hide js">
+                    <div id="{{ zoom_img_id }}" style="padding-top:{{ 1 | divided_by: media.aspect_ratio | times: 100}}%;position: relative;overflow: hidden;" class="product-single__photo-{{ section.id }}{% if enable_zoom %} js-zoom-enabled{% endif %}{% if product.images.size > 1 %} product-single__photo--has-thumbnails{% endif %}{% unless featured_image == media %} hide{% endunless %}" data-image-id="{{ media.id }}"{% if enable_zoom %} data-zoom="{{ media | img_url: product_image_zoom_size, scale: product_image_scale }}"{% endif %}>
+                    <img id="{{ img_id }}" 
+                        loading="lazy" 
+                        class="feature-row__image {{ img_class }} lazyload{% unless featured_image == media %} lazypreload{% endunless %}"
+                        src="{{ media | img_url: '300x300' }}"
+                        data-src="{{ img_url }}"
+                        data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]"
+                        data-aspectratio="{{ media.aspect_ratio }}"
+                        data-sizes="auto"
+                        alt="{{ media.alt | escape }}">
+                    </div>
+                </div>            
+        {% endfor %}
+        {%comment%}additional image{%endcomment%}
+        {% for i in (1..5) %}
+            {% capture img_id %}FeaturedImage-{{ section.id }}-{{ i }}{% endcapture %}
+            {% capture img_class %}product-featured-img{% endcapture %}
+            {% capture zoom_img_id %}FeaturedImageZoom-{{ section.id }}-{{ i }}{% endcapture %}
+            {% capture img_wrapper_id %}{{ zoom_img_id }}-wrapper{% endcapture %}
+            <div id="{{ img_wrapper_id }}" class="product-single__photo-wrapper small--hide js">
+                <div id="{{ zoom_img_id }}" style="padding-top:100.0%;position: relative;overflow: hidden;" class="product-single__photo-{{ section.id }}{% if enable_zoom %} js-zoom-enabled{% endif %}{% if product.images.size > 1 %} product-single__photo--has-thumbnails{% endif %}{% unless featured_image == media %} hide{% endunless %}" data-image-id="{{ i }}"{% if enable_zoom %} data-zoom="//cdn.shopify.com/s/files/1/0291/1322/1168/files/{{pref_img_name}}_ENG-0{{i}}.jpg"{% endif %}>
+                <img id="{{ img_id }}" 
+                    loading="lazy" 
+                    class="feature-row__image {{ img_class }} lazyload"
+                    src="//cdn.shopify.com/s/files/1/0291/1322/1168/files/{{pref_img_name}}_ENG-0{{i}}.jpg">
+                </div>
+            </div> 
+        {% endfor %}
+      <div class="thumbnails-wrapper {% if product.images.size == 1 %}medium-up--hide{% endif %}{% if enable_thumbnail_slides == true %} thumbnails-slider--active{% endif %}">
+        {% if enable_thumbnail_slides == true %}
+        <button type="button" class="btn btn--link small--hide thumbnails-slider__btn thumbnails-slider__prev thumbnails-slider__prev--{{ section.id }}">
+          {% include 'icon-chevron-left' %}
+          <span class="icon__fallback-text">{{ 'sections.slideshow.prev_slide' | t }}</span>
+        </button>
+        {% endif %}
+            <ul class="grid responsive slider grid--uniform product-single__thumbnails product-single__thumbnails_abtest">
+                    {% for media in product.media limit:3 %}
+                            <li class="grid__item {% unless enable_thumbnail_slides == true %}{{ product_thumbnail_width }} {% endunless %}{% if product.images.size > 1 %}product-single__thumbnails-item{% endif %} js">
+                            <a href="{{ media.src | img_url: product_image_zoom_size, scale: product_image_scale }}"
+                                    class="text-link product-single__thumbnail product-single__thumbnail--{{ section.id }}"
+                                    data-thumbnail-id="{{ media.id }}"
+                                    {% if enable_zoom %}data-zoom="{{ media.src | img_url: product_image_zoom_size, scale: product_image_scale }}"{% endif %}>
+                                    <img class="product-single__thumbnail-image medium-up--hide" loading="lazy" src="{{ media.src | img_url: '480x480', scale: 2 }}" alt="{{ media.alt | escape }}">
+                                    <img class="product-single__thumbnail-image small--hide" loading="lazy" src="{{ media.src | img_url: 'compact' }}" alt="{{ media.alt | escape }}">
+                                    </a>
+                                </li>       
+                    {% endfor %}
+                    {%comment%}additional image{%endcomment%}
+                    {% for i in (1..5) %}
+                      <li class="grid__item {% unless enable_thumbnail_slides == true %}{{ product_thumbnail_width }} {% endunless %}{% if product.images.size > 1 %}product-single__thumbnails-item{% endif %} js">
+                        <a href="//cdn.shopify.com/s/files/1/0291/1322/1168/files/{{pref_img_name}}_ENG-0{{i}}.jpg"
+                              class="text-link product-single__thumbnail product-single__thumbnail--{{ section.id }}"
+                              data-thumbnail-id="{{ i }}"
+                              {% if enable_zoom %}data-zoom="//cdn.shopify.com/s/files/1/0291/1322/1168/files/{{pref_img_name}}_ENG-0{{i}}.jpg"{% endif %}>
+                              <img class="product-single__thumbnail-image medium-up--hide" loading="lazy" src="//cdn.shopify.com/s/files/1/0291/1322/1168/files/{{pref_img_name}}_ENG-0{{i}}.jpg" alt="{{ media.alt | escape }}">
+                              <img class="product-single__thumbnail-image small--hide" loading="lazy" src="//cdn.shopify.com/s/files/1/0291/1322/1168/files/{{pref_img_name}}_ENG-0{{i}}.jpg" alt="{{ media.alt | escape }}">
+                              </a>
+                          </li>
+                    {% endfor %}
+            </ul>        
+        {% if enable_thumbnail_slides == true %}
+        <button type="button" class="btn btn--link small--hide thumbnails-slider__btn thumbnails-slider__next thumbnails-slider__next--{{ section.id }}">
+          {% include 'icon-chevron-right' %}
+          <span class="icon__fallback-text">{{ 'sections.slideshow.next_slide' | t }}</span>
+        </button>
+        {% endif %}
+      </div>
+    </div>
+{%endif%}
+    
     <div class="grid__item product-single__photos medium-up--one-half">
       
       {% render 'label-product-tag', products: product %}
