--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -8,7 +8,7 @@
 {{"https://cozycountryredirect.addons.business/js/eggbox/5107/dtag/script.js?shop=unidragon.myshopify.com" | script_tag }}
 
   <script src="https://www.googleoptimize.com/optimize.js?id=OPT-5RD9DVZ"></script>
-  
+
 {% include 'booster-seo' %}
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -154,7 +154,8 @@ if (match && match.length > 0) window.localStorage.setItem('sid', match[0]);
 </noscript>
 <!-- End of Taboola Pixel Code -->
 
- 
+
+  
 {% include 'pagefly-header' %}
 
 <!-- BeginConsistentCartAddon -->  <script>  {% if customer %}  Shopify.customer_logged_in = true ;  Shopify.customer_email = "{{ customer.email }}" ;  Shopify.log_uuids = true;  {% else %}  Shopify.customer_logged_in = false ;  Shopify.customer_email = "" ;  Shopify.log_uuids = true;  {% endif %}  </script>  <!-- EndConsistentCartAddon -->
@@ -358,7 +359,30 @@ twq('track','PageView');
 </script>
 
 <!-- END chat2desk -->
+<script>
+  if ($('#78c456a0-bc54-11eb-910a-479bd9607d41').get(0)) {
+  let targetNode = $('#78c456a0-bc54-11eb-910a-479bd9607d41').get(0);
+  let config = { childList: true };
+  let callback = function(mutationsList, observer) {
+      for(const mutation of mutationsList) {
+        //console.log(mutation.type);
+          if (mutation.type === 'childList') {
+            $('.rating-stars--Klg7s use').each(function() {
+              if ($(this).attr('xlink:href') == '#star-o--3jj6C') $(this).parent().remove();;
+  				});
+            $('.rating-stars--Klg7s svg').replaceWith('<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="96px" height="96px" viewBox="0 0 96 96" version="1.1"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g fill-rule="nonzero"><rect id="Rectangle-path" fill="#73CF11" x="0" y="0" width="96" height="96"/><path d="M48,64.7 L62.6,61 L68.7,79.8 L48,64.7 Z M81.6,40.4 L55.9,40.4 L48,16.2 L40.1,40.4 L14.4,40.4 L35.2,55.4 L27.3,79.6 L48.1,64.6 L60.9,55.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 L81.6,40.4 Z" id="Shape" fill="#FFFFFF"/></g></g></svg>')
+            $('.single-review--2jaY0 .rating-stars--Klg7s> svg:nth-child(6n)').replaceWith('<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 96 96"><style type="text/css">.st0{fill:#73CF11;}.st1{fill:#DCDCE6;}.st2{fill:#FFFFFF;}</style><g><g><g id="Half"><rect x="48" class="st1" width="48" height="96"/><rect class="st0" width="48" height="96"/></g><path id="Shape" class="st2" d="M48,64.7L62.6,61l6.1,18.8L48,64.7z M81.6,40.4H55.9L48,16.2l-7.9,24.2H14.4l20.8,15l-7.9,24.2    l20.8-15l12.8-9.2L81.6,40.4L81.6,40.4L81.6,40.4L81.6,40.4z"/></g></g></svg>')
+            $('.powered--n1eOl b:nth-child(2)').before('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 278.2 278.2" width="15px" height="15px"><path fill="#00b67a" d="M271.3 98.6H167.7L135.7 0l-32.1 98.6L0 98.5l83.9 61L51.8 258l83.9-60.9 83.8 60.9-32-98.5 83.8-60.9z"/><path fill="#005128" d="M194.7 181.8l-7.2-22.3-51.8 37.6z"/></svg>');
+            observer.disconnect();
+          }
 
+      }
+  };
+
+  let observer = new MutationObserver(callback);
+  observer.observe(targetNode, config);
+  }
+</script>
   <script async type='text/javascript' src='//asset.fwcdn1.com/js/storyblock.js'></script>  
    <!--DV 10/03/21-->
 {{ 'jquery.fancybox.min.css' | asset_url | stylesheet_tag }}
