--- a/snippets/swatch.liquid
+++ b/snippets/swatch.liquid
@@ -48,7 +48,7 @@ Set the extension of your color files below. Use 'png', 'jpeg', 'jpg' or 'gif'.
   <div class="swatch_container">
     {% assign values = '' %}
     {% assign size_count = 0 %}
-    {% for variant in product.variants %}
+    {% for variant in product.variants limit:3%}
 
     {% assign value = variant.options[option_index] %}
     {% unless values contains value %}
